@@ -1,15 +1,21 @@
+Tue Nov 23 11:30:53 2004  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* orbsvcs/tests/FaultTolerance/IOGR/run_test.pl:
+
+	  New file.
+
 Tue Nov 23 10:43:59 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/ast/ast_root.cpp:
-        
+
           Fixed off-by-one error in cleanup of global scope between
           processing multiple IDL files on the command line. We
           were leaving one extra member of the name-reference list
           hanging around (in addtion to the predefined types, which
           persist through the entire execution).
-          
+
         * TAO_IDL/be/be_codegen.cpp:
-        
+
           Fixed the logic that decides whether or not to generate an
           #include of Typecode.h in the *C.cpp file, meshing with
           other logic that decides about generating the same include
